2005-01-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
        * Merge of October 2004 HEAD patches to generics branch